--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ display: none;
 .image-reveal {
   min-width:100%;
   height:100%;
-  background: url(images/story.png);
+  background-image: url(../images/story.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
